# notebook_vs_ide

./: pyproject.toml
complex_project/: Makefile  README.md
complex_project/infrastructure/: backend.tf  provider.tf  storage.tf
complex_project/python/: Dockerfile  Dockerfile.dash  Dockerfile.tests  Makefile  entrypoint.sh  logging.conf  pyproject.toml
complex_project/python/bootcamp_2021_01/application/: parse.py  predict.py  train.py
complex_project/python/bootcamp_2021_01/domain/: evaluation.py
complex_project/python/bootcamp_2021_01/domain/dash_components/: banner.py
complex_project/python/bootcamp_2021_01/domain/feature_engineering/: feature_engineering.py  target_definition.py
complex_project/python/bootcamp_2021_01/domain/modeling/: model_optimization.py
complex_project/python/bootcamp_2021_01/domain/persistence/landing/: sample_dataset.py
complex_project/python/bootcamp_2021_01/domain/persistence/use_cases/: export_persistence.py  models_persistence.py
complex_project/python/bootcamp_2021_01/gui/: ekilibr8.py  ekilibr8_state.py  layout.py  options.py
complex_project/python/bootcamp_2021_01/gui/assets/: base-styles.css  custom-styles.css
complex_project/python/notebooks/: .gitignore  dataviz.ipynb  dataviz.py  explo_datahoarder.ipynb  explo_datahoarder.py  explo_notpeter_and_bachelorarbeit.ipynb  explo_notpeter_and_bachelorarbeit.py  explo_vc_holy_grail.py  modelisation_successful_startups.ipynb  modelisation_successful_startups.py
complex_project/python/notebooks_jupytext/: VC_Validation.py  dataviz.py  explo_datahoarder.py  explo_notpeter_and_bachelorarbeit.py  modelisation_successful_startups.py
complex_project/python/tests/bootcamp_2021_01/domain/feature_engineering/: test_feature_engineering.py  test_target_definition.py
complex_project/python/tests/bootcamp_2021_01/domain/persistence/use_cases/: test_models_persistence.py
complex_project/python/tests/bootcamp_2021_01/gui/: test_ekilibr8.py  timeout_manager.py
complex_project/scripts/: check_tools.bash  create_dash_application.bash  delete_dash_application.bash
complex_project/scripts/templates/: task_definition.template.json
complex_project/workdir/landing/: data_sources.adoc
complex_project/workdir/use_cases/bootcamp-2021-01/exports/: shapley_values.npz
exploration/: exploration.ipynb  exploration_all_code.ipynb
exploration/.ipynb_checkpoints/: exploration-checkpoint.ipynb
tutorial/: Correction Modèles Avancés.ipynb  Modèles avancés.ipynb
