[tool.poetry]
name = "devox_poland"
version = "0.1.0"
description = ""
authors = ["victorlandeau <vlandeau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jupytext = "^1.13.8"
pandas = "^1.4.2"
plotly = "^5.8.0"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
